--- a/requirements.txt
+++ b/requirements.txt
@@ -2,25 +2,46 @@
 # $ conda create --name <env> --file <this file>
 # platform: linux-64
 absl-py=0.1.10=py36_0
+alabaster=0.7.10=py36h306e16b_0
+asn1crypto=0.24.0=py36_0
 astor=0.6.2=py36_0
+babel=2.5.3=py36_0
+backcall=0.1.0=py36_0
 bleach=1.5.0=py36_0
+bzip2=1.0.6=h9a117a8_4
 ca-certificates=2018.03.07=0
+cairo=1.14.12=h77bcde2_0
 certifi=2018.1.18=py36_0
+cffi=1.11.5=py36h9745a5d_0
+chardet=3.0.4=py36h0f667ec_1
+cryptography=2.2.2=py36h14c3975_0
 cycler=0.10.0=py36h93f1223_0
 dbus=1.13.2=hc3f9b76_0
+decorator=4.2.1=py36_0
+docutils=0.14=py36hb0f60f5_0
 expat=2.2.5=he0dffb1_0
+ffmpeg=3.4=h7264315_0
 fontconfig=2.12.6=h49f89f6_0
 freetype=2.8=hab7d2ae_1
 gast=0.2.0=py36_0
 glib=2.53.6=h5d9569c_2
+graphite2=1.3.10=hf63cedd_1
 grpcio=1.10.0=py36hf484d3e_0
 gst-plugins-base=1.12.4=h33fb286_0
 gstreamer=1.12.4=hb53b477_0
 h5py=2.7.1=py36h3585f63_0
+harfbuzz=1.7.6=hc5b324e_0
 hdf5=1.10.1=h9caa474_1
 html5lib=0.9999999=py36_0
 icu=58.2=h9c2bf20_1
+idna=2.6=py36h82fb2a8_1
+imagesize=1.0.0=py36_0
 intel-openmp=2018.0.0=8
+ipython=6.3.0=py36_0
+ipython_genutils=0.2.0=py36hb52b0d5_0
+jasper=1.900.1=hd497a04_4
+jedi=0.11.1=py36_1
+jinja2=2.10=py36ha16c418_0
 jpeg=9b=h024ee3a_2
 keras=2.1.5=py36_0
 kiwisolver=1.0.1=py36h764f252_0
@@ -28,37 +49,60 @@ libedit=3.1=heed3624_0
 libffi=3.2.1=hd88cf55_4
 libgcc-ng=7.2.0=hdf63c60_3
 libgfortran-ng=7.2.0=hdf63c60_3
+libopus=1.2.1=hb9ed12e_0
 libpng=1.6.34=hb9fc6fc_0
 libprotobuf=3.5.1=h6f1eeef_0
 libstdcxx-ng=7.2.0=hdf63c60_3
 libtiff=4.0.9=h28f6b97_0
+libvpx=1.6.1=h888fd40_0
 libxcb=1.13=h1bed415_0
 libxml2=2.9.7=h26e45fe_0
 markdown=2.6.11=py36_0
+markupsafe=1.0=py36hd9260cd_1
 matplotlib=2.2.2=py36h0e671d2_0
 mkl=2018.0.2=1
 mkl_fft=1.0.1=py36h3010b51_0
 mkl_random=1.0.1=py36h629b387_0
 ncurses=6.0=h9df7e31_2
 numpy=1.14.2=py36hdbf6ddf_1
+numpydoc=0.8.0=py36_0
 olefile=0.45.1=py36_0
+opencv=3.3.1=py36h0a11808_0
 openssl=1.0.2o=h20670df_0
+packaging=17.1=py36_0
+parso=0.1.1=py36h35f843b_0
 pcre=8.41=hc27e229_1
+pexpect=4.4.0=py36_0
+pickleshare=0.7.4=py36h63277f8_0
 pillow=5.0.0=py36h3deb7b8_0
 pip=9.0.3=py36_0
+pixman=0.34.0=hceecf20_3
+prompt_toolkit=1.0.15=py36h17d85b1_0
 protobuf=3.5.1=py36hf484d3e_0
+ptyprocess=0.5.2=py36h69acd42_0
+pycparser=2.18=py36hf9f622e_1
+pygments=2.2.0=py36h0d3125c_0
+pyopenssl=17.5.0=py36h20ba746_0
 pyparsing=2.2.0=py36hee85983_1
 pyqt=5.6.0=py36h0386399_5
+pysocks=1.6.8=py36_0
 python=3.6.5=hc3d631a_0
 python-dateutil=2.7.2=py36_0
 pytz=2018.3=py36_0
 pyyaml=3.12=py36hafb9ca4_1
 qt=5.6.2=hd25b39d_14
 readline=7.0=ha6073c6_4
+requests=2.18.4=py36he2e5f8d_1
+scikit-learn=0.19.1=py36h7aa7ec6_0
 scipy=1.0.1=py36hfc37229_0
 setuptools=39.0.1=py36_0
+simplegeneric=0.8.1=py36_2
 sip=4.18.1=py36h51ed4ed_2
 six=1.11.0=py36h372c433_1
+snowballstemmer=1.2.1=py36h6febd40_0
+sphinx=1.7.2=py36_0
+sphinxcontrib=1.0=py36h6d0f590_1
+sphinxcontrib-websupport=1.0.1=py36hb5cb234_1
 sqlite=3.22.0=h1bed415_0
 tensorboard=1.6.0=py36hf484d3e_0
 tensorflow=1.6.0=0
@@ -66,6 +110,10 @@ tensorflow-base=1.6.0=py36hff88cb2_0
 termcolor=1.1.0=py36_1
 tk=8.6.7=hc745277_3
 tornado=5.0.1=py36_1
+traitlets=4.3.2=py36h674d592_0
+typing=3.6.4=py36_0
+urllib3=1.22=py36hbe7ace6_0
+wcwidth=0.1.7=py36hdf4376a_0
 werkzeug=0.14.1=py36_0
 wheel=0.31.0=py36_0
 xz=5.2.3=h55aa19d_2
